<resources>
    <string name="app_name">Cancun </string>

    <string name="action_settings">Settings</string>

    <string name="home_item">Home</string>
    <string name="productos_item">Restaurantes</string>
    <string name="compras_item">Playas</string>
    <string name="ordenes_item">Bares</string>
    <string name="facturas_item">Antros</string>
    <string name="opcion1">Plazas</string>
    <string name="opcion2">Clima</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item">Configuracion</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ver_detalle">VerDetalleActivity</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>




    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_rutas">Rutas</string>

    <!-- Default screen margins, per the Android Design guidelines. -->


</resources>
